--- a/map.html
+++ b/map.html
@@ -130,98 +130,142 @@
   "root": {
     "label": "הרב זקס - חלון להגות יהודית",
     "children": [
-      {"label":"0 - ברוכים הבאים","children":[
-        {"label":"מפת למידה"},
-        {"label":"סילבוס"},
-        {"label":"למה הרב זקס? למה עכשיו?"},
-        {"label":"ברכת נשיא המדינה"}
-      ]},
-      {"label":"1 - ביוגרפיה","children":[
-        {"label":"רקע ביוגרפי והשפעתו על הגות הרב זקס"},
-        {"label":"מנהיגות ומורשת הרב זקס"},
-        {"label":"מבוא להגות הרב זקס"},
-        {"label":"מה למדנו?","children":[
-          {"label":"חקר ביוגרפי"},
-          {"label":"עיצוב תפיסת עולם"},
-          {"label":"מודל מנהיגותי"},
-          {"label":"התבוננות מחודשת בזהות יהודית ומנהיגות במאה ה-21"}
-        ]}
-      ]},
-      {"label":"2 - יסודות פילוסופיים","children":[
-        {"label":"מבוא לפילוסופיה יהודית"},
-        {"label":"חקר האחריות והמחשבה היהודית"},
-        {"label":"כשלון הנאורות"},
-        {"label":"מסורת בעידן לא מסורתי"},
-        {"label":"מה למדנו?","children":[
-          {"label":"הגדרת הפילוסופיה היהודית, התפתחותה ההיסטורית והאינטלקטואלית, ומיקומו של הרב יונתן זקס בהקשר הפילוסופי־יהודי העכשווי"},
-          {"label":"האחריות כמסגרת אתית"},
-          {"label":"בין מסורת למודרניות"},
-          {"label":"הביקורת על הנאורות"},
-          {"label":"המחשבה היהודית ככלי פעיל"}
-        ]}
-      ]},
-      {"label":"3 - המתודה הפרשנית","children":[
-        {"label":"מבוא לפרשנות עפ\"י הרב זקס"},
-        {"label":"מרבנות לפילוסופיה"},
-        {"label":"פרופ' חנוך בן פזי על אתגרי הפרשנות הטקסטואלית"},
-        {"label":"גישה פרשנית לטקסטים קשים"},
-        {"label":"חומר קריאה: לא בשם האל"},
-        {"label":"מה למדנו?","children":[
-          {"label":"סינתזה דיסציפלינרית"},
-          {"label":"פרשנות אחראית"},
-          {"label":"איזון נאמנות/רלוונטיות"},
-          {"label":"בנייה מתוך אתגר"}
-        ]}
-      ]},
-      {"label":"4 - מטקסט לדיאלוג","children":[
-        {"label":"פרופ' יונתן רינהולד על חזונו של הרב זקס"},
-        {"label":"דיאלוג בין אמונה וחברה"},
-        {"label":"השפעת רוזנצוויג"},
-        {"label":"מסורת בעידן לא מסורתי"},
-        {"label":"תורה וחכמה היהדות והעולם"},
-        {"label":"מה למדנו?","children":[
-          {"label":"דיאלוג אמונה–חברה"},
-          {"label":"שמירת מסורת בעידן מודרני"},
-          {"label":"תורה וחכמה"},
-          {"label":"יסודות פילוסופיים"}
-        ]}
-      ]},
-      {"label":"5 - מדע, מודרניות ומנהיגות","children":[
-        {"label":"מודרניות וחברה"},
-        {"label":"מודרניות ומנהיגות בחברה"},
-        {"label":"מאמר - בלשון העתיד"},
-        {"label":"תפקיד הרב הראשי של אנגליה"},
-        {"label":"לורד דוד וולפסון על מורשת והשפעה"},
-        {"label":"מאמר: חלומות ומציאות - שיחה עם עמוס עוז"},
-        {"label":"מדע ודת"},
-        {"label":"מדע אמונה וקיימות - פרופ' אריה צבן"},
-        {"label":"מה למדנו?","children":[
-          {"label":"יישומים במדע וחברה"},
-          {"label":"השפעה על מוסדות"},
-          {"label":"חשיבה ביקורתית"},
-          {"label":"תרומה לשיח מדע–דת"}
-        ]}
-      ]},
-      {"label":"6 - מורשת חיה","children":[
-        {"label":"מורשת הרב זקס והשפעותיה"},
-        {"label":"פרופ׳ אדם פרזינגר"},
-        {"label":"הרב דניאל אפשטיין"},
-        {"label":"ד״ר חיים נריה"},
-        {"label":"ג׳ואנה בן הרוש"},
-        {"label":"ג׳ואנה גרינווי"},
-        {"label":"מאמר: רדיקלית אז, רדיקלית עכשיו"},
-        {"label":"מה למדנו?","children":[
-          {"label":"הרב זקס כתרבות"},
-          {"label":"חדירת רעיונותיו"},
-          {"label":"תרומת הארכיון"},
-          {"label":"השפעה על חינוך וזהות"},
-          {"label":"מסורת ככוח להתחדשות"}
-        ]}
-      ]},
-      {"label":"7 - סיכום","children":[
-        {"label":"חלון לערכים, זהות ומנהיגות"},
-        {"label":"פרויקט מסכם"}
-      ]}
+      {
+        "label": "0 - ברוכים הבאים",
+        "children": [
+          { "label": "# הקדמה" },
+          { "label": "1. למה הרב זקס, למה עכשיו?\n2. מפת הקורס\n3. סילבוס" },
+          { "label": "כיצד לסיים את הקורס בהצלחה?" },
+          { "label": "ערכים, זהות וחינוך יהודי במאה ה־21" }
+        ]
+      },
+      {
+        "label": "1 - ביוגרפיה",
+        "children": [
+          { "label": "#01 יסודות ביוגרפיים בהגות הרב זקס" },
+          { "label": "גילה זקס - מבט אישי על התפתחות הרב זקס כפילוסוף והוגה יהודי" },
+          { "label": "הרב דיין בינשטוק - מן הדרשה המקומית אל המורשת ההגותית" },
+          {
+            "label": "מה נלמד?",
+            "children": [
+              { "label": "1. חקר ביוגרפי" },
+              { "label": "2. עיצוב תפיסת עולם" },
+              { "label": "3. מודל מנהיגותי" },
+              { "label": "4. התבוננות מחודשת בזהות יהודית ומנהיגות במאה ה-21" }
+            ]
+          }
+        ]
+      },
+      {
+        "label": "2 - יסודות פילוסופיים",
+        "children": [
+          { "label": "#02 יסודות פילוסופיים בהגות היהודית" },
+          { "label": "פרופ׳ חנוך בן פזי - דיאלוגים פילוסופיים: חקר האחריות והמחשבה היהודית" },
+          { "label": "מרציונליזם אוניברסלי לברית חברתית: ביקורת הנאורות עפ״י הרב זקס" },
+          { "label": "הרב ד\"ר רפאל זארום: חקר המחשבה וההשפעה היהודית" },
+          { "label": "מסורת בעידן לא מסורתי" },
+          { "label": "הרב זקס: ללא מורא - העתיד כאתגר והזדמנות" },
+          {
+            "label": "מה נלמד?",
+            "children": [
+              { "label": "הגדרת הפילוסופיה היהודית, התפתחותה ההיסטורית והאינטלקטואלית, ומיקומו של הרב יונתן זקס בהקשר הפילוסופי־יהודי העכשווי" },
+              { "label": "האחריות כמסגרת אתית: מה מציעה הפילוסופיה היהודית להבנת האחריות בעולם המודרני" },
+              { "label": "בין מסורת למודרניות: איך מנהלים דיאלוג פורה בין המסורת היהודית לבין האתגרים של העידן הפוסט-מסורתי" },
+              { "label": "הביקורת על הנאורות: מהן ההשלכות של כישלון פרויקט הנאורות על חקר המחשבה היהודית ועל רלוונטיות המקורות היהודיים" },
+              { "label": "המחשבה היהודית ככלי פעיל: כיצד הופכת המחשבה היהודית מאוסף ידע היסטורי לכלי עכשווי לפתרון דילמות מודרניות" }
+            ]
+          }
+        ]
+      },
+      {
+        "label": "3 - המתודה הפרשנית",
+        "children": [
+          { "label": "#03 המתודה הפרשנית בהגות הרב זקס" },
+          { "label": "הרב ד\"ר מייקל האריס - בין רבנות לפילוסופיה: מסעו של הרב זקס" },
+          { "label": "פרופ' חנוך בן פזי - עיקרון הפרשנות כמעשה מוסרי בהגות הרב זקס" },
+          { "label": "פרשנות טקסטים קשים בתורה כאתגר מוסרי ותאולוגי" },
+          { "label": "לא בשם האל" },
+          {
+            "label": "מה נלמד?",
+            "children": [
+              { "label": "עקרון הסינתזה הדיסציפלינרית: איך משלבים רבנות ופילוסופיה בפרשנות טקסט" },
+              { "label": "עקרון הפרשנות האחראית: כיצד נמנעים מפרשנות לא אתית של טקסטים דתיים" },
+              { "label": "עקרון האיזון בין נאמנות לרלוונטיות: איך משמרים אותנטיות תוך יצירת משמעות מודרנית" },
+              { "label": "עקרון הבנייה הבונה מתוך האתגר: כיצד הופכים קושי פרשני לכלי מוסרי" }
+            ]
+          }
+        ]
+      },
+      {
+        "label": "4 - מטקסט לדיאלוג",
+        "children": [
+          { "label": "#04 דיאלוג בחברה מגוונת בעידן רב תרבותי" },
+          { "label": "פרופ' ג'ונתן ריינהולד - ברית, שיח ומדינה בהגות הרב זקס" },
+          { "label": "הפילוסופיה של הדיאלוג: בין רוזנצווייג לרב זקס" },
+          { "label": "מסורת בעידן לא מסורתי" },
+          {
+            "label": "מה נלמד?",
+            "children": [
+              { "label": "דיאלוג בין אמונה לחברה – נבחן  עקרון יסוד בהגות הרב זקס: דיאלוג בין אמונה דתית לבין חברה פלורליסטית-מודרנית כמסגרת הכרחית לעיצוב חיים מוסריים וחברתיים משותפים" },
+              { "label": "שמירת המסורת בעידן מודרני – נעמיק באתגר שמציבה המודרניות למסורת הדתית, והאופן בו הרב זקס מציע מודל למסורת רלוונטית, מחייבת ויצירתית גם בתקופה המאופיינת בחילון ובשינוי מתמיד" },
+              { "label": "תורה וחכמה – נבחן את עקרון ההפריה ההדדית שבין התורה כקול ייחודי של זהות יהודית פרטיקולרית לבין החכמה האוניברסלית" },
+              { "label": "היסודות הפילוסופיים בהגותו – נעמוד על השפעת פרנץ רוזנצווייג ותרומתו של עקרון הדיאלוג וחיי המפגש לעיצוב ההגות של הרב זקס, ונבחן את הממד הביקורתי כלפי הנאורות כבסיס לחשיבה יהודית מחודשת בעידן המודרני" }
+            ]
+          }
+        ]
+      },
+      {
+        "label": "5 - מודרניות וחברה",
+        "children": [
+          { "label": "#05 בין מסורת למודרנה" },
+          { "label": "בלשון עתיד" },
+          { "label": "תפקיד הרב הראשי: מנהיגות יהודית בחברה רב־תרבותית" },
+          { "label": "הרב לורד דוד וולפסון: יהדות, השפעה ומנהיגות בזירה האנגלית" },
+          { "label": "\"חלומות ומציאות\"" },
+          { "label": "מדע ודת - ניגוד או השלמה?" },
+          { "label": "פרופ׳ אריה צבן - מה בין מדע, אמונה וקיימות?" },
+          {
+            "label": "מה נלמד?",
+            "children": [
+              { "label": "הבנה מעמיקה של יישומי הגות הרב זקס בתחומי המדע, החברה והמנהיגות, תוך זיהוי הקשרים הרעיוניים בין התחומים השונים" },
+              { "label": "היכרות עם ההשפעה המעשית והיישומית של רעיונותיו על מבנים חברתיים, מוסדות ציבוריים ותהליכי קבלת החלטות במגזרים שונים" },
+              { "label": "כישורי ניתוח וחשיבה ביקורתית של הקשרים המורכבים בין תיאוריה למעשה בהגות הרב זקס, תוך הבחנה בין עקרונות תיאורטיים ליישומיהם המעשיים" },
+              { "label": "הבנה היסטורית ועכשווית: תרומת הרב זקס לשיח העכשווי בנושאי המדע, הדת והחברה, והערכת מקומו בהקשר האינטלקטואלי הרחב יותר" }
+            ]
+          }
+        ]
+      },
+      {
+        "label": "6 - מורשת חיה",
+        "children": [
+          { "label": "#06 הגותו של הרב זקס - בין זיכרון ציבורי להשראה" },
+          { "label": "פרופ' אדם פרזיגר - כיצד הפך הרב זקס לתופעה תרבותית בישראל?" },
+          { "label": "הרב דניאל אפשטיין - מציטוטים על הקיר למדף הספרים" },
+          { "label": "ד\"ר חיים נריה - הארכיון כבסיס להבנת מורשת הרב זקס" },
+          { "label": "ג'ואנה בנהרוש - אתגרי המודרניות, האחריות הציבורית והזהות היהודית במציאות משתנה" },
+          { "label": "ג'ואן גרינאוויי - מורשת חינוכית כיסוד למנהיגות יהודית מתחדשת" },
+          { "label": "החזון החינוכי עפ״י הרב זקס" },
+          { "label": "רדיקלית אז רדיקלית עכשיו" },
+          { "label": "לצפייה נוספת: דברי הרב מירוויס" },
+          { "label": "מה מגדיר את מורשתו המתמשכת של הרב זקס?" },
+          {
+            "label": "מה נלמד?",
+            "children": [
+              { "label": "בחינת תהליך הפיכתו של הרב זקס לדמות תרבותית בעלת השפעה בשיח הציבורי בישראל" },
+              { "label": "ניתוח חדירת רעיונותיו מן ההקשר היומיומי אל השדה ההגותי והספרותי" },
+              { "label": "חקירת תרומתו של הארכיון כמרחב לשימור, המשכיות והנחלת המורשת" },
+              { "label": "דיון בהשלכות מורשתו על עיצוב חינוך, זהות ומנהיגות יהודית בעידן מודרני" },
+              { "label": "עיון במאמר “רדיקלית אז, רדיקלית עכשיו” כהמשגה של המסורת ככוח מתמיד להתחדשות רעיונית וחברתית" }
+            ]
+          }
+        ]
+      },
+      {
+        "label": "7 - סיכום מסע",
+        "children": [
+          { "label": "#07 חלון לעתיד: מסורת והתחדשות בהגות יהודית" }
+        ]
+      }
     ]
   }
 }
