--- a/Map_Module01.html
+++ b/Map_Module01.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>הרב זקס - חלון להגות יהודית - Mind-Map Standalone (RTL)</title>
+<title>ביוגרפיה – Mind-Map Standalone (RTL)</title>
 <link href="https://fonts.googleapis.com/css2?family=Alef:wght@400;700&display=swap" rel="stylesheet">
 <style>
   :root{
@@ -122,166 +122,42 @@
   </div>
 </div>
 
-<!-- === DATA (הרב זקס) === -->
+<!-- === DATA (ביוגרפיה) === -->
 <script id="mindmap-data" type="application/json">
 {
   "dir": "rtl",
   "flow": "rtl",
   "root": {
-    "label": "הרב זקס - חלון להגות יהודית",
+    "label": "ביוגרפיה",
     "children": [
       {
-        "label": "0 - ברוכים הבאים",
+        "label": "שיעור #01 – יסודות ביוגרפיים בהגות הרב זקס",
         "children": [
-          { "label": "# הקדמה" },
-          { "label": "1. למה הרב זקס, למה עכשיו?\n2. מפת הקורס\n3. סילבוס" },
-          { "label": "כיצד לסיים את הקורס בהצלחה?" },
-          { "label": "ערכים, זהות וחינוך יהודי במאה ה־21" }
+          { "label": "הסטודנט ינתח את הביוגרפיה של הרב זקס כציר פרשני להבנת עולמו ההגותי והאתי." },
+          { "label": "הסטודנט יבחן את האינטראקציה שבין זהות יהודית-בריטית לבין עיצוב חשיבה פילוסופית מודרנית." },
+          { "label": "הסטודנט יבין את תרומת הסביבה המשפחתית והקהילתית לעיצוב תודעת האחריות המוסרית." },
+          { "label": "הסטודנט יעמוד על תהליך המעבר ממחשבה תאורטית אל מחויבות מוסרית וציבורית." },
+          { "label": "הסטודנט יעריך את האופן שבו חוויות חיים מוקדמות משתקפות בהבניית מודל המנהיגות שלו." }
         ]
       },
       {
-        "label": "1 - ביוגרפיה",
+        "label": "שיעור #02 – גילה זקס: מבט אישי על התפתחות הרב זקס כפילוסוף והוגה יהודי",
         "children": [
-          {
-            "label": "שיעור #01 – יסודות ביוגרפיים בהגות הרב זקס",
-            "children": [
-              { "label": "הסטודנט ינתח את הביוגרפיה של הרב זקס כציר פרשני להבנת עולמו ההגותי והאתי." },
-              { "label": "הסטודנט יבחן את האינטראקציה שבין זהות יהודית-בריטית לבין עיצוב חשיבה פילוסופית מודרנית." },
-              { "label": "הסטודנט יבין את תרומת הסביבה המשפחתית והקהילתית לעיצוב תודעת האחריות המוסרית." },
-              { "label": "הסטודנט יעמוד על תהליך המעבר ממחשבה תאורטית אל מחויבות מוסרית וציבורית." },
-              { "label": "הסטודנט יעריך את האופן שבו חוויות חיים מוקדמות משתקפות בהבניית מודל המנהיגות שלו." }
-            ]
-          },
-          {
-            "label": "שיעור #02 – גילה זקס: מבט אישי על התפתחות הרב זקס כפילוסוף והוגה יהודי",
-            "children": [
-              { "label": "הסטודנט ינתח את דמותו של הרב זקס דרך פרספקטיבה אישית ומשפחתית ככלי להבנת תשתיות זהותיות." },
-              { "label": "הסטודנט יזהה את מקורות ההשפעה התרבותיים והחברתיים בעיצוב עולמו הרוחני." },
-              { "label": "הסטודנט יבחן את משמעות חוויות הלימוד בקיימברידג׳ ואת השפעת מלחמת ששת הימים על תפיסת הייעוד היהודי." },
-              { "label": "הסטודנט יבין את תרומת הרב סולובייצ׳יק והרבי מלובביץ׳ לעיצוב תודעת השליחות והמנהיגות הדתית." },
-              { "label": "הסטודנט ידון בעקרון 'היציאה מחדר העבודה אל החיים' כמטאפורה פילוסופית למעבר מהגות למעשה." }
-            ]
-          },
-          {
-            "label": "שיעור #03 – הרב דיין בינשטוק: מן הדרשה המקומית אל המורשת ההגותית",
-            "children": [
-              { "label": "הסטודנט יבחן את ביטויה הציבורי של הגותו של הרב זקס בהקשר של קהילה, חינוך ותפילה." },
-              { "label": "הסטודנט ינתח את ערכי הסובלנות, האחריות והחינוך כתשתית לתיאולוגיה מוסרית מודרנית." },
-              { "label": "הסטודנט יעמוד על החיבור שבין פרשנות טקסטואלית לבין תובנות פילוסופיות באקט ההנהגתי." },
-              { "label": "הסטודנט יפרש את הדיכוטומיה שבין 'מחנה' (ברית גורל) ו'עדה' (ברית ייעוד) כמודל להבנת זהות קולקטיבית." },
-              { "label": "הסטודנט ידון במושג 'אות בספר התורה' כהמשגה של רציפות רוחנית ומנהיגות בין-דורית." }
-            ]
-          }
+          { "label": "הסטודנט ינתח את דמותו של הרב זקס דרך פרספקטיבה אישית ומשפחתית ככלי להבנת תשתיות זהותיות." },
+          { "label": "הסטודנט יזהה את מקורות ההשפעה התרבותיים והחברתיים בעיצוב עולמו הרוחני." },
+          { "label": "הסטודנט יבחן את משמעות חוויות הלימוד בקיימברידג׳ ואת השפעת מלחמת ששת הימים על תפיסת הייעוד היהודי." },
+          { "label": "הסטודנט יבין את תרומת הרב סולובייצ׳יק והרבי מלובביץ׳ לעיצוב תודעת השליחות והמנהיגות הדתית." },
+          { "label": "הסטודנט ידון בעקרון 'היציאה מחדר העבודה אל החיים' כמטאפורה פילוסופית למעבר מהגות למעשה." }
         ]
       },
       {
-        "label": "2 - יסודות פילוסופיים",
+        "label": "שיעור #03 – הרב דיין בינשטוק: מן הדרשה המקומית אל המורשת ההגותית",
         "children": [
-          { "label": "#02 יסודות פילוסופיים בהגות היהודית" },
-          { "label": "פרופ׳ חנוך בן פזי - דיאלוגים פילוסופיים: חקר האחריות והמחשבה היהודית" },
-          { "label": "מרציונליזם אוניברסלי לברית חברתית: ביקורת הנאורות עפ״י הרב זקס" },
-          { "label": "הרב ד\"ר רפאל זארום: חקר המחשבה וההשפעה היהודית" },
-          { "label": "מסורת בעידן לא מסורתי" },
-          { "label": "הרב זקס: ללא מורא - העתיד כאתגר והזדמנות" },
-          {
-            "label": "מה נלמד?",
-            "children": [
-              { "label": "הגדרת הפילוסופיה היהודית, התפתחותה ההיסטורית והאינטלקטואלית, ומיקומו של הרב יונתן זקס בהקשר הפילוסופי־יהודי העכשווי" },
-              { "label": "האחריות כמסגרת אתית: מה מציעה הפילוסופיה היהודית להבנת האחריות בעולם המודרני" },
-              { "label": "בין מסורת למודרניות: איך מנהלים דיאלוג פורה בין המסורת היהודית לבין האתגרים של העידן הפוסט-מסורתי" },
-              { "label": "הביקורת על הנאורות: מהן ההשלכות של כישלון פרויקט הנאורות על חקר המחשבה היהודית ועל רלוונטיות המקורות היהודיים" },
-              { "label": "המחשבה היהודית ככלי פעיל: כיצד הופכת המחשבה היהודית מאוסף ידע היסטורי לכלי עכשווי לפתרון דילמות מודרניות" }
-            ]
-          }
-        ]
-      },
-      {
-        "label": "3 - המתודה הפרשנית",
-        "children": [
-          { "label": "#03 המתודה הפרשנית בהגות הרב זקס" },
-          { "label": "הרב ד\"ר מייקל האריס - בין רבנות לפילוסופיה: מסעו של הרב זקס" },
-          { "label": "פרופ' חנוך בן פזי - עיקרון הפרשנות כמעשה מוסרי בהגות הרב זקס" },
-          { "label": "פרשנות טקסטים קשים בתורה כאתגר מוסרי ותאולוגי" },
-          { "label": "לא בשם האל" },
-          {
-            "label": "מה נלמד?",
-            "children": [
-              { "label": "עקרון הסינתזה הדיסציפלינרית: איך משלבים רבנות ופילוסופיה בפרשנות טקסט" },
-              { "label": "עקרון הפרשנות האחראית: כיצד נמנעים מפרשנות לא אתית של טקסטים דתיים" },
-              { "label": "עקרון האיזון בין נאמנות לרלוונטיות: איך משמרים אותנטיות תוך יצירת משמעות מודרנית" },
-              { "label": "עקרון הבנייה הבונה מתוך האתגר: כיצד הופכים קושי פרשני לכלי מוסרי" }
-            ]
-          }
-        ]
-      },
-      {
-        "label": "4 - מטקסט לדיאלוג",
-        "children": [
-          { "label": "#04 דיאלוג בחברה מגוונת בעידן רב תרבותי" },
-          { "label": "פרופ' ג'ונתן ריינהולד - ברית, שיח ומדינה בהגות הרב זקס" },
-          { "label": "הפילוסופיה של הדיאלוג: בין רוזנצווייג לרב זקס" },
-          { "label": "מסורת בעידן לא מסורתי" },
-          {
-            "label": "מה נלמד?",
-            "children": [
-              { "label": "דיאלוג בין אמונה לחברה – נבחן  עקרון יסוד בהגות הרב זקס: דיאלוג בין אמונה דתית לבין חברה פלורליסטית-מודרנית כמסגרת הכרחית לעיצוב חיים מוסריים וחברתיים משותפים" },
-              { "label": "שמירת המסורת בעידן מודרני – נעמיק באתגר שמציבה המודרניות למסורת הדתית, והאופן בו הרב זקס מציע מודל למסורת רלוונטית, מחייבת ויצירתית גם בתקופה המאופיינת בחילון ובשינוי מתמיד" },
-              { "label": "תורה וחכמה – נבחן את עקרון ההפריה ההדדית שבין התורה כקול ייחודי של זהות יהודית פרטיקולרית לבין החכמה האוניברסלית" },
-              { "label": "היסודות הפילוסופיים בהגותו – נעמוד על השפעת פרנץ רוזנצווייג ותרומתו של עקרון הדיאלוג וחיי המפגש לעיצוב ההגות של הרב זקס, ונבחן את הממד הביקורתי כלפי הנאורות כבסיס לחשיבה יהודית מחודשת בעידן המודרני" }
-            ]
-          }
-        ]
-      },
-      {
-        "label": "5 - מודרניות וחברה",
-        "children": [
-          { "label": "#05 בין מסורת למודרנה" },
-          { "label": "בלשון עתיד" },
-          { "label": "תפקיד הרב הראשי: מנהיגות יהודית בחברה רב־תרבותית" },
-          { "label": "הרב לורד דוד וולפסון: יהדות, השפעה ומנהיגות בזירה האנגלית" },
-          { "label": "\"חלומות ומציאות\"" },
-          { "label": "מדע ודת - ניגוד או השלמה?" },
-          { "label": "פרופ׳ אריה צבן - מה בין מדע, אמונה וקיימות?" },
-          {
-            "label": "מה נלמד?",
-            "children": [
-              { "label": "הבנה מעמיקה של יישומי הגות הרב זקס בתחומי המדע, החברה והמנהיגות, תוך זיהוי הקשרים הרעיוניים בין התחומים השונים" },
-              { "label": "היכרות עם ההשפעה המעשית והיישומית של רעיונותיו על מבנים חברתיים, מוסדות ציבוריים ותהליכי קבלת החלטות במגזרים שונים" },
-              { "label": "כישורי ניתוח וחשיבה ביקורתית של הקשרים המורכבים בין תיאוריה למעשה בהגות הרב זקס, תוך הבחנה בין עקרונות תיאורטיים ליישומיהם המעשיים" },
-              { "label": "הבנה היסטורית ועכשווית: תרומת הרב זקס לשיח העכשווי בנושאי המדע, הדת והחברה, והערכת מקומו בהקשר האינטלקטואלי הרחב יותר" }
-            ]
-          }
-        ]
-      },
-      {
-        "label": "6 - מורשת חיה",
-        "children": [
-          { "label": "#06 הגותו של הרב זקס - בין זיכרון ציבורי להשראה" },
-          { "label": "פרופ' אדם פרזיגר - כיצד הפך הרב זקס לתופעה תרבותית בישראל?" },
-          { "label": "הרב דניאל אפשטיין - מציטוטים על הקיר למדף הספרים" },
-          { "label": "ד\"ר חיים נריה - הארכיון כבסיס להבנת מורשת הרב זקס" },
-          { "label": "ג'ואנה בנהרוש - אתגרי המודרניות, האחריות הציבורית והזהות היהודית במציאות משתנה" },
-          { "label": "ג'ואן גרינאוויי - מורשת חינוכית כיסוד למנהיגות יהודית מתחדשת" },
-          { "label": "החזון החינוכי עפ״י הרב זקס" },
-          { "label": "רדיקלית אז רדיקלית עכשיו" },
-          { "label": "לצפייה נוספת: דברי הרב מירוויס" },
-          { "label": "מה מגדיר את מורשתו המתמשכת של הרב זקס?" },
-          {
-            "label": "מה נלמד?",
-            "children": [
-              { "label": "בחינת תהליך הפיכתו של הרב זקס לדמות תרבותית בעלת השפעה בשיח הציבורי בישראל" },
-              { "label": "ניתוח חדירת רעיונותיו מן ההקשר היומיומי אל השדה ההגותי והספרותי" },
-              { "label": "חקירת תרומתו של הארכיון כמרחב לשימור, המשכיות והנחלת המורשת" },
-              { "label": "דיון בהשלכות מורשתו על עיצוב חינוך, זהות ומנהיגות יהודית בעידן מודרני" },
-              { "label": "עיון במאמר “רדיקלית אז, רדיקלית עכשיו” כהמשגה של המסורת ככוח מתמיד להתחדשות רעיונית וחברתית" }
-            ]
-          }
-        ]
-      },
-      {
-        "label": "7 - סיכום מסע",
-        "children": [
-          { "label": "#07 חלון לעתיד: מסורת והתחדשות בהגות יהודית" }
+          { "label": "הסטודנט יבחן את ביטויה הציבורי של הגותו של הרב זקס בהקשר של קהילה, חינוך ותפילה." },
+          { "label": "הסטודנט ינתח את ערכי הסובלנות, האחריות והחינוך כתשתית לתיאולוגיה מוסרית מודרנית." },
+          { "label": "הסטודנט יעמוד על החיבור שבין פרשנות טקסטואלית לבין תובנות פילוסופיות באקט ההנהגתי." },
+          { "label": "הסטודנט יפרש את הדיכוטומיה שבין 'מחנה' (ברית גורל) ו'עדה' (ברית ייעוד) כמודל להבנת זהות קולקטיבית." },
+          { "label": "הסטודנט ידון במושג 'אות בספר התורה' כהמשגה של רציפות רוחנית ומנהיגות בין-דורית." }
         ]
       }
     ]
@@ -398,7 +274,6 @@
       subHeight(c);
       total += c._subH;
       if(i>0){ total += (node.gapOverride != null) ? node.gapOverride : gapForDepth(c.depth); }
-      if(node.depth===0 && i<node.children.length-1){ total += GAP_BETWEEN_MODS_D2; }
     });
     node._subH = Math.max(node.height, total); return node._subH;
   }
@@ -412,11 +287,7 @@
     node.y = top + node._subH/2;  // ממורכז ביחס לתת-העץ
     if(!(node.collapsed) && node.children.length){
       let cursor = top;
-      node.children.forEach((c,idx)=>{
-        position(c, depth+1, cursor);
-        cursor += c._subH + gapForDepth(c.depth);
-        if(node.depth===0 && idx < node.children.length-1){ cursor += GAP_BETWEEN_MODS_D2; }
-      });
+      node.children.forEach((c)=>{ position(c, depth+1, cursor); cursor += c._subH + gapForDepth(c.depth); });
     }
   }
 
